styles/about.css
/* About Section with Scroll Animations */

body {
  height: 100vh;
  background-image: url(../imgs/aboutBg.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

h2 {
  color: var(--red);
  text-shadow: 3px 3px 5px var(--bg);
}

p { /* text color */
  color: var(--text);
  font-size: 2rem;
  text-shadow: 3px 3px 5px black;
}

section {
  font-size: 3.0rem;
  display: grid;
  place-items: center;
  align-content: center;
  min-height: 100vh;
}

.hidden {
  opacity: 0;
  filter: blur(5px);
  transform: translateX(-100%);
  transition: all 1s;
}

.show {
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}

.logos {
  display: flex;
  flex-direction: row;
  gap: 2rem;
}

.logo:nth-child(2) {
  transition-delay: 200ms;
}

.logo:nth-child(3) {
  transition-delay: 400ms;
}

.logo:nth-child(4) {
  transition-delay: 600ms;
}

.profile {
  border: solid var(--bg);
  border-radius: 2rem;
}

a.page {
  font-size: 4rem;
  color: var(--text);
  text-shadow: 2px 2px 5px var(--bg);
}

@media (max-width: 600px) { /* reactivity to thin screens */
  .logos {
    flex-direction: column;
    gap: 0.5rem;
  }
}

